crates/unsoundness_checker/tests/snapshots/rules/type_checking_directive_used/markdown_test__snippet_02.snap
---
source: crates/unsoundness_checker/tests/markdown_test.rs
expression: output
---
warning[type-checking-directive-used]: Type checking directive `pyright: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:1:14
  |
1 | res = foo()  # pyright: ignore
  |              ^^^^^^^^^^^^^^^^^
2 |
3 | res = foo()  # pyright: ignore[reportUndefinedVariable]
  |
info: rule `type-checking-directive-used` was selected in the configuration file

warning[type-checking-directive-used]: Type checking directive `pyright: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:3:14
  |
1 | res = foo()  # pyright: ignore
2 |
3 | res = foo()  # pyright: ignore[reportUndefinedVariable]
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file
